@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add dns_domain methods
 
 0.001010  2022-05-30 15:34:46+02:00 Europe/Vienna
     - fix api_versions successful test
